--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
         </div>
         <div class="center">
             <h2>Portfolio</h2>
-            <p><a href=#>Odkaz 1</a></p>
-            <p><a href=#>Odkaz 2</a></p>
-            <p><a href=#>Odkaz 3</a></p>
+            <p><a href="https://janaeffenbergerova.github.io/colmaracademy/">Colmar Academy</a></p>
+            <p><a href="https://janaeffenbergerova.github.io/jumpstart/">Jumpstart</a></p>
         </div>
         <div class="right">
             <h2>Kontakt</h2>
-            <p>E-mail:</p>
+            <p>E-mail: </p>
             <p>Telefon:</p>
         </div>
       </div>
