--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Portfolio</title>
     <link href="./reset.css" type="text/css" rel="stylesheet">
     <link href="./style.css" type="text/css" rel="stylesheet">
