--- a/index.html
+++ b/index.html
@@ -3,35 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Portfolio</title>
-    <link href="./reset.css" type="text/css" rel="stylesheet">
-    <link href="./style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <title>Portfolio | Jana Effenbergerová</title>
+    <link href="reset.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
     <div class="page">
-      <header>
-        <h1>Jana Effenbergerová</h1>
-      </header>
-      <div class="main">
-        <div class="left">
-            <h2>O mně</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-        </div>
-        <div class="center">
-            <h2>Portfolio</h2>
-            <p><a href="https://janaeffenbergerova.github.io/colmaracademy/">Colmar Academy</a></p>
-            <p><a href="https://janaeffenbergerova.github.io/jumpstart/">Jumpstart</a></p>
-        </div>
-        <div class="right">
-            <h2>Kontakt</h2>
-            <p>E-mail: </p>
-            <p>Telefon:</p>
-        </div>
-      </div>
-      <footer>
-      <p>&copy 2018 Jana Effenbergerová</p>
-      </footer>
+        <h1>Portfolio</h1>
+        <h2>Jana Effenbergerová</h2>
+        <nav>
+          <ul>
+            <li><a href="#">O mně</a> | </li>
+            <li><a href="#">Portfolio</a> | </li>
+            <li><a href="#">Kontakt</a></li>
+          <ul>
+        </nav>
+        <p>&copy 2018 Jana Effenbergerová</p>
     </div>
   </body>
 </html>
