--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   </head>
   <body>
     <div class="page">
-        <h1>Portfolio</h1>
-        <h2>Jana Effenbergerová</h2>
+      <header>
         <nav>
           <ul>
-            <li><a href="#">O mně</a> | </li>
-            <li><a href="#">Portfolio</a> | </li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a href="index.html">Úvodní stránka</a> | </li>
+            <li><a href="portfolio.html">Portfolio</a> | </li>
+            <li><a href="kontakt.html">Kontakt</a></li>
           <ul>
         </nav>
+      </header>
+      <main>
+        <h1 class="index">Portfolio</h1>
+        <h2 class="index">Jana Effenbergerová</h2>
+      </main>
+      <footer>
         <p>&copy 2018 Jana Effenbergerová</p>
+      </footer>
     </div>
   </body>
 </html>
