--- a/kontakt.html
+++ b/kontakt.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Portfolio | Jana Effenbergerová</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="reset.css" type="text/css" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
@@ -21,9 +22,11 @@
       </header>
       <main>
         <div class="container">
-          <h1>Kontakt</h1>
-          <h2>E-mail: xxxxxxxxx</h2>
-          <h2>Telefon: 777777777</h2>
+          <div class="container2">
+            <h1>Kontakt</h1>
+            <h2>E-mail: xxxxxxxxx</h2>
+            <h2>Telefon: 777777777</h2>
+          </div>
         </div>
       </main>
       <footer>
