--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Portfolio | Jana Effenbergerová</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="reset.css" type="text/css" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
@@ -20,8 +21,8 @@
         </nav>
       </header>
       <main>
-        <h1 class="index">Portfolio</h1>
-        <h2 class="index">Jana Effenbergerová</h2>
+        <h1 class="index container container2">Portfolio</h1>
+        <h2 class="index container container2">Jana Effenbergerová</h2>
       </main>
       <footer>
         <p>&copy 2018 Jana Effenbergerová</p>
