--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Portfolio | Jana Effenbergerová</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="reset.css" type="text/css" rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
@@ -21,16 +22,24 @@
       </header>
       <main>
         <div class="container">
-          <h1>Portfolio</h1>
-          <h2>Colmar Academy</h2>
-          <p>Závěrečný projekt kurzu Build Websites from Scratch. Tuto stránku jsem kompletně vytvořila na základě
-          <a href="colmar-academy-wireframes.png" alt="wireframy" target="_blank"> těchto wireframů.</a></p>
-          <p>Tady je <a href="https://janaeffenbergerova.github.io/colmaracademy/" target="_blank">odkaz</a> na stránku.<p>
-          <h2>Warehouse</h2>
-          <p>Závěrečný projekt kurzu Build Websites UIs. Této stránce jsem vytvořila nový design a optimalizovala ji pro různá zařízení.</p>
-          <p>Tady je <a href="https://janaeffenbergerova.github.io/warehouse" target="_blank">odkaz</a>.</p>
-          <h2>Další projekt</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="container2">
+            <h1>Portfolio</h1>
+          </div>
+          <div class="container2">
+            <h2>Colmar Academy</h2>
+            <p>Závěrečný projekt kurzu Build Websites from Scratch. Tuto stránku jsem kompletně vytvořila na základě
+            <a href="colmar-academy-wireframes.png" alt="wireframy" target="_blank"> těchto wireframů.</a></p>
+            <p>Tady je <a href="https://janaeffenbergerova.github.io/colmaracademy/" target="_blank">odkaz</a> na stránku.<p>
+          </div>
+          <div class="container2">
+            <h2>Warehouse</h2>
+            <p>Závěrečný projekt kurzu Build Websites UIs. Této stránce jsem vytvořila nový design a optimalizovala ji pro různá zařízení.</p>
+            <p>Tady je <a href="https://janaeffenbergerova.github.io/warehouse" target="_blank">odkaz</a>.</p>
+          </div>
+          <div class="container2">
+            <h2>Další projekt</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
       </main>
       <footer>
