--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,10 @@
           <div class="container2">
             <h2>Warehouse</h2>
             <p>Závěrečný projekt kurzu Build Websites UIs. Této stránce jsem vytvořila nový design a optimalizovala ji pro různá zařízení.</p>
-            <p>Tady je <a href="https://janaeffenbergerova.github.io/warehouse" target="_blank">odkaz</a>.</p>
+            <div class="image-container">
+              <p>Tady je <a href="https://janaeffenbergerova.github.io/warehouse" target="_blank">odkaz</a> na stránku.<p>
+            </div>
+
           </div>
           <div class="container2">
             <h2>Další projekt</h2>
