dva odkazy zpět

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Rozcestník</h1>
     <ul>
+      <li><a href="https://janaeffenbergerova.github.io/colmaracademy/">Colmar Academy</a></li>
+      <li><a href="https://janaeffenbergerova.github.io/warehouse/">Warehouse</a></li>
       <li><a href="https://janaeffenbergerova.github.io/jumpstart/">Jumpstart</a></li>
       <li><a href="https://janaeffenbergerova.github.io/mytimes/">My Times</a></li>
       <li><a href="https://janaeffenbergerova.github.io/teacozy/">Tea Cozy</a></li>
