--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Rozcestník</h1>
     <ul>
-      <li><a href="https://janaeffenbergerova.github.io/colmaracademy/">Colmar Academy</a></li>
       <li><a href="https://janaeffenbergerova.github.io/warehouse/">Warehouse</a></li>
+      <li><a href="https://janaeffenbergerova.github.io/colmaracademy/">Colmar Academy</a></li>
       <li><a href="https://janaeffenbergerova.github.io/jumpstart/">Jumpstart</a></li>
       <li><a href="https://janaeffenbergerova.github.io/mytimes/">My Times</a></li>
       <li><a href="https://janaeffenbergerova.github.io/teacozy/">Tea Cozy</a></li>
@@ -18,8 +18,8 @@
       <li><a href="https://janaeffenbergerova.github.io/secretagent/">Secret agent supply</a></li>
       <li><a href="https://janaeffenbergerova.github.io/dasmoto/">Dasmoto's Arts & Crafts</a></li>
       <li><a href="https://janaeffenbergerova.github.io/excursion/">Excursion</a></li>
-      <li><a href="https://janaeffenbergerova.github.io/beach/">Beach Paradise</a></li>
-      <li><a href="https://janaeffenbergerova.github.io/paris/">Paris</a></li>
     </ul>
+    <p>Pro stránky Warehouse jsem vytvořila nový design (barevná paleta, fonty, ikona) a upravovala výchozí kód. Colmar Academy jsem kódovala 
+      podle wireframů a dotvořila design. Ostatní stránky jsem celé kódovala podle grafického návrhu. </p>
   </body>
 </html>
