--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <li><a href="https://janaeffenbergerova.github.io/secretagent/">Secret agent supply</a></li>
       <li><a href="https://janaeffenbergerova.github.io/dasmoto/">Dasmoto's Arts & Crafts</a></li>
       <li><a href="https://janaeffenbergerova.github.io/excursion/">Excursion</a></li>
+      <li><a href="https://janaeffenbergerova.github.io/cheatsheet/">Cheatsheet</a></li>
     </ul>
   </body>
 </html>
+
